--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <h1>Formulário de cadastro</h1>
 <body>
     <form>
-        <label for="name">Insira seu nome </label> <input type="text" id="name" placeholder="Seu nome"> <br> 
-        <label for="login">Insira seu E-mail</label> <input type="email" id="login" placeholder="Seu E-mail"> <br>
-        <label for="senha">Insira sua senha </label> <input type="text" id="senha" placeholder="Sua senha"> 
+        <label for="name">Insira seu nome </label> <input type="text" id="name" placeholder="Seu nome"> <br> \
+
+        <label for="login">Insira seu E-mail</label> <input type="email" id="login" placeholder="Seu E-mail"> <br> \
+
+        <label for="senha">Insira sua senha </label> <input type="password" id="senha" placeholder="Sua senha"> \   
         <br>
         <button type="submit">
             Cadastrar   
